deployment/deployment.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    teleport-app: occupancy-controller
    app: occupancy-controller
    teleport.nyp-itsours.com/app: discover
  name: occupancy-controller-service
  annotations:
    teleport.dev/name: occupancy-controller
    teleport.dev/protocol: http
spec:
  ports:
    - name: monitoring
      port: 80
      targetPort: 8888
  selector:
    app: occupancy-controller
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: occupancy-controller
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: internal
spec:
  ingressClassName: traefik-private
  tls:
    - hosts:
      - occupancy.kube.artynet.local
      secretName: occupancy.kube.artynet.local.crt
  rules:
  - host: occupancy.kube.artynet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: occupancy-controller-service
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: occupancy-controller
  labels:
    app: occupancy-controller
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: occupancy-controller
  template:
    metadata:
      labels:
        app: occupancy-controller
    spec:
      # tolerations:
      # - key: "node-type"
      #   operator: "Equal"
      #   value: "rpi4"
      #   effect: "NoSchedule"
      # - key: "coral"
      #   operator: "Exists"
      #   effect: "PreferNoSchedule"
      imagePullSecrets:
      - name: nypregcred
      containers:
      - name: occupancy-controller
        image: ghcr.io/elijahnyp/home_controller:ca5e807
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8888
            protocol: TCP
            name: monitor
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 250Mi
        volumeMounts:
        - name: config-file
          mountPath: /home_controller/config
          readOnly: true
      volumes:
        - name: config-file
          configMap:
            name: home-controller-config
